packages/wasm-guest/tests/macro_error/generic_parameters.rs
use serpent_automation_wasm_guest::workflow;

#[workflow]
async fn counter<T>() {}

fn main() {}
